src/App.css
.App{
  height:100vh;
  overflow:hidden;
}

.app{
  background-color: #0f0f0f;
  bottom: 50vh;
  display: flex;
}
.navbar{
  background-color: #1F1F1F !important;
}
.navlogo{
  margin-left:70%;
}

.vl{
  height:100vh;
  border-left: 0.1px solid #FFFFFF;
  float:left;
  z-index: -0500;
  position:relative;
}
#vl1{
  margin-left:5%;
}
#vl2{
  margin-left:55%;
}
#vl3{
  margin-left:30%;
}
.head{
  display: flex;
  position:relative;
  bottom:85vh;
  font-family: 'Anton', sans-serif;
  letter-spacing: 1px;
  
  left:5.1%;
}
.head2{
  font-size: 20px;
  display: flex;
  position:relative;
  bottom:85vh;
  color:#F7F7F7 !important;
  left:5%;
}
.circle{
  position: absolute;
  top: 30%;
  left: 63.5%;
  border: 0.1px solid #F3EFE6;
  border-radius: 50%;
  width: 300px;
  height: 300px;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
}
.inner-circle{
  position: absolute;
  border-radius: 50%;
  background-color: #C02D33;
  width: 75px;
  height: 75px;
  left: 112.5px;
  top: -37.5px;
}
.inner-text{
  color: #C02D33;
  font-family: 'IBM Plex Mono';
  font-size: 24px;
}

